# orb-discord

./: .gitignore  config.example.json  pyproject.toml
e2e/: README.md  __init__.py  __main__.py  config.py  harness.py  helpers.py  reporting.py
e2e/scenarios/: image_extraction.py  live_dashboard.py  pagination.py  question_answer.py  session_lifecycle.py  slash_commands.py
flint_discord/: __init__.py  __main__.py  api.py  bot.py  config.py  events.py  sessions.py
flint_discord/cogs/: admin.py  tasks.py
src/orb_discord/: __init__.py  __main__.py  api.py  bot.py  config.py  dashboard.py  events.py  formatting.py  sessions.py  state.py
src/orb_discord/cogs/: admin.py  sessions.py  tasks.py
tests/: conftest.py  test_dashboard.py  test_sessions.py  test_state.py
